--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -13,12 +13,12 @@
 }
 
 @InProceedings{application_of_fast2018,
-  author      = {Васеева, Татьяна Валерьевна and Альтман, Евгений Анатольевич and Малютин, Андрей Геннадьевич},
-  booktitle   = {Современные проблемы радиоэлектроники},
-  title       = {Применение быстрых алгоритмов для выполнения фильтрации изображений},
-  year        = {2018},
-  pages       = {162--165},
-  authorother = {true},
+  author     = {Васеева, Татьяна Валерьевна and Альтман, Евгений Анатольевич and Малютин, Андрей Геннадьевич},
+  booktitle  = {Современные проблемы радиоэлектроники},
+  title      = {Применение быстрых алгоритмов для выполнения фильтрации изображений},
+  year       = {2018},
+  pages      = {162--165},
+  authorconf = {true},
 }
 
 @InProceedings{comparative_analysis_2019,
@@ -207,38 +207,38 @@
 }
 
 @Article{altman2019program,
-  author  = {Альтман, Евгений Анатольевич and Васеева, Татьяна Валериевна and Елизаров, Дмитрий Александрович},
-  title   = {Программа для расчета гармоник и интергармоник тока и напряжения электрической сети прямым корреляционным методом с использованием быстрых алгоритмов обработки сигналов},
-  year    = {2019},
-  program = {true},
+  author      = {Альтман, Евгений Анатольевич and Васеева, Татьяна Валериевна and Елизаров, Дмитрий Александрович},
+  title       = {Программа для расчета гармоник и интергармоник тока и напряжения электрической сети прямым корреляционным методом с использованием быстрых алгоритмов обработки сигналов},
+  year        = {2019},
+  authorother = {true},
 }
 
 @Article{Malyutin2018Mathematical,
-  author = {Малютин, АГ and Задорожный, ВН and Альтман, ЕА and Грицутенко, СС and Захаренко, ЕИ and Васеева, ТВ},
-  title  = {Математическое моделирование, численные методы и комплексы программ для решения задач обработки сигналов и анализа структуры информационной системы},
-  year   = {2018},
-  nir    = {true},
+  author      = {Малютин, АГ and Задорожный, ВН and Альтман, ЕА and Грицутенко, СС and Захаренко, ЕИ and Васеева, ТВ},
+  title       = {Математическое моделирование, численные методы и комплексы программ для решения задач обработки сигналов и анализа структуры информационной системы},
+  year        = {2018},
+  authorother = {true},
 }
 
 @Article{Malyutin2019Mathematical,
-  author = {Малютин, АГ and Альтман, ЕА and Задорожный, ВН and Грицутенко, СС and Захаренко, ЕИ and Васеева, ТВ},
-  title  = {Математическое моделирование, численные методы и комплексы программ для решения задач обработки сигналов и измерения характеристик технических систем},
-  year   = {2019},
-  nir    = {true},
+  author      = {Малютин, АГ and Альтман, ЕА and Задорожный, ВН and Грицутенко, СС and Захаренко, ЕИ and Васеева, ТВ},
+  title       = {Математическое моделирование, численные методы и комплексы программ для решения задач обработки сигналов и измерения характеристик технических систем},
+  year        = {2019},
+  authorother = {true},
 }
 
 @Article{Malyutin2019Improvement,
-  author = {Малютин, АГ and Денисова, ЛА and Кильдибеков, АБ and Лаврухин, АА and Красулин, АВ and Васеева, ТВ},
-  title  = {Совершенствование подходов, архитектур и алгоритмов информационно-управляющих систем и средств измерения},
-  year   = {2019},
-  nir    = {true},
+  author      = {Малютин, АГ and Денисова, ЛА and Кильдибеков, АБ and Лаврухин, АА and Красулин, АВ and Васеева, ТВ},
+  title       = {Совершенствование подходов, архитектур и алгоритмов информационно-управляющих систем и средств измерения},
+  year        = {2019},
+  authorother = {true},
 }
 
 @Article{Malyutin2020Mathematical,
-  author = {Малютин, АГ and Альтман, ЕА and Задорожный, ВН and Васеева, ТВ},
-  title  = {Математическое моделирование, численные методы и комплексы программ для решения задач обработки сигналов и измерения характеристик технических систем},
-  year   = {2020},
-  nir    = {true},
+  author      = {Малютин, АГ and Альтман, ЕА and Задорожный, ВН and Васеева, ТВ},
+  title       = {Математическое моделирование, численные методы и комплексы программ для решения задач обработки сигналов и измерения характеристик технических систем},
+  year        = {2020},
+  authorother = {true},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
