--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -95,15 +95,11 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Анализ математических основ объекта исследования и формулировка математической модели многотонального сигнала.
-  
-  \item Изучение и экспериментальное исследование алгоритмов оценки параметров гармоник.
+  \item Анализ математических основ объекта исследования и формулировка математической модели многотонального сигнала. Изучение и экспериментальное исследование алгоритмов оценки параметров гармоник.
   
   \item Развитие математической модели многотональных сигналов в части расчета точности оценки амплитуды применительно к используемому при оценке параметров гармоник подходу, связанному с применением оконных функций.
   
-  \item Разработка численных методов для оценки параметров гармоник, позволяющих достичь расчетной точности для амплитуды гармоники.
-  
-  \item Разработка алгоритмов для эффективного выполнения численных методов из предыдущей задачи.
+  \item Разработка численных методов для оценки параметров гармоник, позволяющих достичь расчетной точности для амплитуды гармоники и разработка алгоритмов для эффективного выполнения численных методов.
   
   \item Разработка комплекса программа для анализа и доработки алгоритмов оценки параметров гармоник многотональных сигналов.
 \end{enumerate}
@@ -162,7 +158,8 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 
 {\probation}
 Результаты работы отражались в научных докладах, которые представлялись на Научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2016)~\cite{detectors_local2016}, Всероссийской научно-практической конференции <<Информационно-телекоммуникационная системы и технологии>>
-(Кемерово, 2016)~\cite{boundary_recognition2017}, XI Научной конференции, посвященной Дню российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2017)~\cite{innovative_projects2017}, V Всероссийской научно-технической конференции с международным участием <<Технологическое обеспечение ремонта и повышение динамических качеств железнодорожного подвижного состава>> (Омск, 2017)~\cite{implementation_of_algorithms2017}, II Международной научно-практической конференции  <<САПР и моделирование в современной электронике>> (Брянск, 2018)~\cite{information-measuring2018}, XIX Всероссийской конференции молодых ученых по математическому моделированию и информационным технологиям <<Тезисы XIX всероссийской конференции молодых ученых  по математическому моделированию и информационным технологиям>> (Кемерово, 2018)~\cite{efficiency_mark2018}, II Всероссийской научно-техническая конференция с международным участием <<Информационные и управляющие системы на транспорте и в промышленности>> (Омск, 2018)~\cite{accuracy_study2018}, Научная конференция, посвященная Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2018)~\cite{depth_expansion2018}, XXI Вcероссийская научно-техническая конференция <<Современные проблемы радоэлектроники>> (Красноярск, 2018)~\cite{application_of_fast2018}, III Международная научно-техническая конференция <<Проблемы машиноведения>> (Омск, 2019)~\cite{cache_oriented2019}, I Всероссийская научно-практическая конференция с международным участием <<Системы управления, информационные технологии и математическое моделирование>> (Омск, 2019)~\cite{comparative_analysis_2019}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2019)~\cite{comparative_analysis2019}, Материалы всероссийской научно-технической конференции <<Надежность функционирования и информационная безопасность инфокоммуникационных, телекоммуникационных и радиотехнических сетей и систем>> (Омск, 2019)~\cite{modern_information2019}, III Международная научно-практическая конференция <<Инновации в информационных технологиях, машиностроении и автотранспорте>>~(Кемерово, 2019)\cite{complexity_assessment2019}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2020)~\cite{comparative_study2020}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2021)~\cite{altman2021boundary}.
+(Кемерово, 2016)~\cite{boundary_recognition2017}, XI Научной конференции, посвященной Дню российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2017)~\cite{innovative_projects2017}, V Всероссийской научно-технической конференции с международным участием <<Технологическое обеспечение ремонта и повышение динамических качеств железнодорожного подвижного состава>> (Омск, 2017)~\cite{implementation_of_algorithms2017}, II Международной научно-практической конференции  <<САПР и моделирование в современной электронике>> (Брянск, 2018)~\cite{information-measuring2018}, XIX Всероссийской конференции молодых ученых по математическому моделированию и информационным технологиям <<Тезисы XIX всероссийской конференции молодых ученых  по математическому моделированию и информационным технологиям>> (Кемерово, 2018)~\cite{efficiency_mark2018}, II Всероссийской научно-техническая конференция с международным участием <<Информационные и управляющие системы на транспорте и в промышленности>> (Омск, 2018)~\cite{accuracy_study2018}, Научная конференция, посвященная Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2018)~\cite{depth_expansion2018}, XXI Вcероссийская научно-техническая конференция <<Современные проблемы радоэлектроники>> (Красноярск, 2018)~\cite{application_of_fast2018}, III Международная научно-техническая конференция <<Проблемы машиноведения>> (Омск, 2019)~\cite{cache_oriented2019}, I Всероссийская научно-практическая конференция с международным участием <<Системы управления, информационные технологии и математическое моделирование>> (Омск, 2019)~\cite{comparative_analysis_2019}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2019)~\cite{comparative_analysis2019}, Материалы всероссийской научно-технической конференции <<Надежность функционирования и информационная безопасность инфокоммуникационных, телекоммуникационных и радиотехнических сетей и систем>> (Омск, 2019)~\cite{modern_information2019}, III Международная научно-практическая конференция <<Инновации в информационных технологиях, машиностроении и автотранспорте>>~(Кемерово, 2019)\cite{complexity_assessment2019}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2020)~\cite{comparative_study2020}, Динамика систем, механизмов и машин (Омск, 2020)~\cite{altman2020boundary},
+ Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2021)~\cite{altman2021boundary}.
 %{\contribution} Автор принимал активное участие \ldots
 
 \ifnumequal{\value{bibliosel}}{0}
@@ -200,7 +197,7 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
         \ifnum \value{citeauthorconf}>0%
             , \arabic{citeauthorconf} "--- в~тезисах докладов, 
             %\arabic{citenir} "--- отчета НИР.
-            $4$ отчетах НИР и $1$ свидетельстве о регистрации программы для ЭВМ, $1$ "--- в~изданиях РИНЦ.
+            $4$ отчетах НИР и $1$ свидетельстве о регистрации программы для ЭВМ.
 % Разобраться, чтобы отчеты НИР учитывались в счетчике            
         
 \else%
