--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -30,8 +30,10 @@
 \fi
 
 \vspace{0pt plus1.5fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
-\Large{Автореферат}\par
-\large{диссертации на соискание учёной степени\par \thesisDegree}
+%\Large{Автореферат}\par
+%\large{диссертации на соискание учёной степени\par \thesisDegree}
+\Large{Научный доклад об основных результатах}\par
+\large{подготовленной научно-квалификационной работы}
 \end{center}
 
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
@@ -42,7 +44,7 @@
 \thispagestyle{empty}
 \noindent Работа выполнена в {\thesisInOrganization}.
 
-\vspace{0.008\paperheight plus1fill}
+%\vspace{0.008\paperheight plus1fill}
 \noindent%
 \begin{tabularx}{\textwidth}{@{}lX@{}}
     \ifdefined\supervisorTwoFio
@@ -69,66 +71,66 @@
                               \textbf{\supervisorFio}
                               \fi
                               \vspace{0.013\paperheight}\\
-    \fi
-    Официальные оппоненты:  &
-    \ifnumequal{\value{showopplead}}{0}{\vspace{13\onelineskip plus1fill}}{%
-        \textbf{\opponentOneFio,}\par
-        \opponentOneRegalia,\par
-        \opponentOneJobPlace,\par
-        \opponentOneJobPost\par
-        \vspace{0.01\paperheight}
-        \textbf{\opponentTwoFio,}\par
-        \opponentTwoRegalia,\par
-        \opponentTwoJobPlace,\par
-        \opponentTwoJobPost
-    \ifdefined\opponentThreeFio
-        \par
-        \vspace{0.01\paperheight}
-        \textbf{\opponentThreeFio,}\par
-        \opponentThreeRegalia,\par
-        \opponentThreeJobPlace,\par
-        \opponentThreeJobPost
-    \fi
-    }%
-    \vspace{0.013\paperheight} \\
-    \ifdefined\leadingOrganizationTitle
-    Ведущая организация:    &
-    \ifnumequal{\value{showopplead}}{0}{\vspace{6\onelineskip plus1fill}}{%
-        \leadingOrganizationTitle
-    }%
-    \fi
+%    \fi
+%    Официальные оппоненты:  &
+%    \ifnumequal{\value{showopplead}}{0}{\vspace{13\onelineskip plus1fill}}{%
+%        \textbf{\opponentOneFio,}\par
+%        \opponentOneRegalia,\par
+%        \opponentOneJobPlace,\par
+%        \opponentOneJobPost\par
+%        \vspace{0.01\paperheight}
+%        \textbf{\opponentTwoFio,}\par
+%        \opponentTwoRegalia,\par
+%        \opponentTwoJobPlace,\par
+%        \opponentTwoJobPost
+%    \ifdefined\opponentThreeFio
+%        \par
+%        \vspace{0.01\paperheight}
+%        \textbf{\opponentThreeFio,}\par
+%        \opponentThreeRegalia,\par
+%        \opponentThreeJobPlace,\par
+%        \opponentThreeJobPost
+%    \fi
+%    }%
+%    \vspace{0.013\paperheight} \\
+%    \ifdefined\leadingOrganizationTitle
+%    Ведущая организация:    &
+%    \ifnumequal{\value{showopplead}}{0}{\vspace{6\onelineskip plus1fill}}{%
+%        \leadingOrganizationTitle
+%    }%
+%    \fi
 \end{tabularx}
-\vspace{0.008\paperheight plus1fill}
+%\vspace{0.008\paperheight plus1fill}
 
-\noindent Защита состоится \defenseDate~на~заседании диссертационного совета \defenseCouncilNumber~при \defenseCouncilTitle~по адресу: \defenseCouncilAddress.
-
-\vspace{0.008\paperheight plus1fill}
-\noindent С диссертацией можно ознакомиться в библиотеке \synopsisLibrary и на сайте по ссылке: 
-
-\vspace{0.008\paperheight plus1fill}
-\noindent Отзывы на автореферат в двух экземплярах, заверенные печатью учреждения, просьба направлять по адресу: \defenseCouncilAddress, ученому секретарю диссертационного совета~\defenseCouncilNumber.
-
-\vspace{0.008\paperheight plus1fill}
-\noindent{Автореферат разослан \synopsisDate.}
-
-\noindent Телефон для справок: \defenseCouncilPhone. \defenseCouncilmail.
-
-\vspace{0.008\paperheight plus1fill}
-\noindent%
-\begin{tabularx}{\textwidth}{@{}%
->{\raggedright\arraybackslash}b{18em}@{}
->{\centering\arraybackslash}X
-r
-@{}}
-    Ученый секретарь\par
-    диссертационного совета\par
-    \defenseCouncilNumber,\par
-    \defenseSecretaryRegalia
-    &
-    \ifnumequal{\value{showsecrsign}}{0}{}{%
-%        \includegraphics[width=2cm]{secretary-signature.png}%
-        \includegraphics[width=2cm]{Secretary-signature_Varepo.JPG}
-    }%
-    &
-    \defenseSecretaryFio
-\end{tabularx}
+%\noindent Защита состоится \defenseDate~на~заседании диссертационного совета \defenseCouncilNumber~при \defenseCouncilTitle~по адресу: \defenseCouncilAddress.
+%
+%\vspace{0.008\paperheight plus1fill}
+%\noindent С диссертацией можно ознакомиться в библиотеке \synopsisLibrary и на сайте по ссылке: 
+%
+%\vspace{0.008\paperheight plus1fill}
+%\noindent Отзывы на автореферат в двух экземплярах, заверенные печатью учреждения, просьба направлять по адресу: \defenseCouncilAddress, ученому секретарю диссертационного совета~\defenseCouncilNumber.
+%
+%\vspace{0.008\paperheight plus1fill}
+%\noindent{Автореферат разослан \synopsisDate.}
+%
+%\noindent Телефон для справок: \defenseCouncilPhone. \defenseCouncilmail.
+%
+%\vspace{0.008\paperheight plus1fill}
+%\noindent%
+%\begin{tabularx}{\textwidth}{@{}%
+%>{\raggedright\arraybackslash}b{18em}@{}
+%>{\centering\arraybackslash}X
+%r
+%@{}}
+%    Ученый секретарь\par
+%    диссертационного совета\par
+%    \defenseCouncilNumber,\par
+%    \defenseSecretaryRegalia
+%    &
+%    \ifnumequal{\value{showsecrsign}}{0}{}{%
+%%        \includegraphics[width=2cm]{secretary-signature.png}%
+%        \includegraphics[width=2cm]{Secretary-signature_Varepo.JPG}
+%    }%
+%    &
+%    \defenseSecretaryFio
+%\end{tabularx}
