--- a/images/IT/Dispersion in the estimation of the fundamental frequency of the voltage.tex
+++ b/images/IT/Dispersion in the estimation of the fundamental frequency of the voltage.tex
@@ -94,9 +94,9 @@
 
 
 % Легенда
-\draw[ultra thick, red] (3, -4.7) -- (3.5, -4.7) node[right, black, font=\small] {- метод Маклеода (5 точек)};
-\draw[ultra thick, blue] (3, -4.4) -- (3.5, -4.4) node[right, black, font=\small] {- второй метод Квина};
-\draw[ultra thick, green] (3, -4.1) -- (3.5, -4.1) node[right, black, font=\small] {- метод корреляционных функций};
-\draw[ultra thick, magenta] (3, -3.8) -- (3.5, -3.8) node[right, black, font=\small] {- граница Крамера-Рао};
+\draw[ultra thick, red] (3, -5.1) -- (3.5, -5.1) node[right, black, font=\small] {- \Large{метод Маклеода (5 точек)}};
+\draw[ultra thick, blue] (3, -4.6) -- (3.5, -4.6) node[right, black, font=\small] {- \Large{второй метод Квина}};
+\draw[ultra thick, green] (3, -4.1) -- (3.5, -4.1) node[right, black, font=\small] {- \Large{метод корреляционных функций}};
+\draw[ultra thick, magenta] (3, -3.6) -- (3.5, -3.6) node[right, black, font=\small] {- \Large{граница Крамера-Рао}};
 \end{tikzpicture}
 \end{document}
