--- a/presentation.tex
+++ b/presentation.tex
@@ -1,4 +1,4 @@
-%&preformat-present
+%&preformat-present\begin{block}{Conclusion}
 
 \newif\ifpresentation % Условие, проверяющее, что документ --- презентация
 \presentationtrue
