--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,65 +1,39 @@
 {\actuality} 
-Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численных методов оценки параметров его гармоник.
+Диссертационная работа посвящена совершенствованию математической модели мультигармонического сигнала и численным методам оценки параметров гармоник. 
 
-Гармоническеская природа сигналов является прямым следствием линейности основных законов физики, описывающих взаимодействие объектов. Поэтому потребность в оценке параметров гармоник сигналов встречается во многих областях науки и техники. В частности, отправной точкой для исследования методов оценивания параметров гармоник в данной работе является применение этих алгоритмов для измерения сигналов в электрических сетях, что является важным средством для контроля и повышения эффективности их работы.
+Задача определения числа гармонических сигналов
+и оценки их параметров (комплексных амплитуд и частот) является актуальной проблемой, так как применяется в различных областях науки и техники.
 
-Анализ имеющихся алгоритмов показал, что имеются работающие и достаточно эффективные алгоритмы, позволяющие с достаточной точностью оценивать параметры основных гармоник сигналов в электрических сетях, находить несущие частоты в радиотехнике и решать другие задачи. Вместе с тем эти алгоритмы находят приближенную оценку параметров, а результаты экспериментов показывают, что их точность не достигает теоретической границы.
+Таким образом изучение алгоритмов оценки гармонических составляющих 
+сигнала является важным направлением, так как используется в области техники. В измерительных приборах применяются алгоритмы, которые оценивают параметры гармоник. Поэтому, чтобы создать приборы с максимальной точностью измерений, необходимо оценивать гармонические составляющие сигнала (частоту, фазу и амплитуду). 
+ 
+Проблема точной оценки параметров гармоник используется во многих отраслях науки: обработка сигналов (фильтрация), электроэнергетика (анализ качества электрической энергии), биомедицина (электрокардиограмма, магнитно-резонансная томография), адаптивное управление (управления нелинейной системой), связь, звуко- и радиолокация (радары и сонары) и другие отрасли. 
 
-Возрастающие требования к точности оценивания параметров гармоник (например, при оценивании интергармоник) с одной стороны, и увеличивающиеся возможности вычислительной техники с другой, делают актуальной тему исследования и разработки более точных алгоритмов для рассматриваемеой задачи.
+Электроэнергетика включает в себя производство, передачу и сбыт электроэнергии, а так же является наиболее важной отраслью энергетики. Поэтому возникла важность алгоритмов оценки параметров гармоник, так как появляются новые стандарты в области контроля качества электрической энергии. Работа большинства электрических приборов обеспечивается качеством поступающей на них электрической энергией. Удовлетворение норм показателей качества электрической энергии является необходимым условием безопасного применения электрооборудования. 
+Применение алгоритмов для измерения мультигармонических сигналов в электрических сетях является важным средством для контроля качества электроэнергии и повышения эффективности работы. Современная измерительная техника позволяет анализировать комплексные значения токов и напряжений высших гармоник и интергармоник. Из-за возникновения гармоник в электрических сетях возникает проблема электромагнитной совместимости электротехнических комплексов. 
+%оценивать однотональные частоты (сигнал содержит одну синусоиду), оценивать мультигармонические частоты (сигнал состоит из нескольких гармонически связанных синусоид), оценивать многотональные частоты, т.~е. возникают несвязанные частоты. В диссертационном исследовании рассматривалась оценка однотональных и мультигармонических частот. 
+
+Существует несколько задач связанных с оценкой спектра сигнала. Среди них оценка параметров одной синусоиды, мультигармонические и многотональные сигналы. В работе рассматриваются задачи возникающие при оценке спектра сигнала в электрической сети, т.~е. оценка параметров одной синусоиды и мультигармонические сигналы (высшие гармоники и интергармоники).
+
 
 Диссертационная работа выполнена в соответствии с планом научно-технических работ Омского государственного университета путей сообщения (тема НИР № АААА-А18-118051190083-5 <<Моделирование и разработка численных методов и программных систем обработки и
 передачи информации>>(2018, 2019, 2020) и тема НИР № 0120.0.961584 <<Разработка и исследование методов и систем управления,
 обработки и передачи информации>> (2019)).
 
 {\progress}
-При оценивании параметров гармоник используются математическе основы и алгоритмы из нескольких областей цифровой обработки сигналов.
+При оценивании параметров гармоник используются математический аппарат и алгоритмы из нескольких областей применения цифровой обработки сигналов.
 
-Преобразование Фурье (Fourier transform) уводит нас из временной области в частотную, и это влечет за собой огромное количество применений. 
+Существенный вклад в изучение алгоритмов интерполирования спектра внесли зарубежные ученные... 
 
-Основным направлением в применении цифровой обработки сигналов (ЦОС) является спектральный анализ. Каждый сигнал, который изменяется во времени, имеет частотный спектр. Электрические сигналы можно анализировать в частотной области с помощью анализаторов спектра, во временной области с помощью осциллографов. 
+В цифровой обработки сигналов (ЦОС) оконные функций широко используются для ограничения сигнала во времени. Важной задачей в спектральном анализе сигнала является оценка частоты и амплитуды спектральных составляющих сигнала. 
+%Для оценки частоты и амлитуды развиваются различные методы спектрального анализа на основе преобразования Фурье. 
+%Эффективным способом снижения несовершенства метода измерений является применение сглаживающих оконных функций. Классические оконные функции включают функции: Ханна, Хемминга, Блэкмана, Кайзера и другие. Оконная функция Кайзера – хорошая аппроксимация оптимального вытянутого сферического окна, концентрирующего большинство энергии в главном лепестке. Путем корректировки параметра $\beta$ мы можем выполнить настройку окна Кайзера. К недостаткам данного метода относится: низкая разрешающей способность, искажением с помощью боковых лепестков спектра сигнала. 
 
-Преобразование Фурье (Fourier transform) уводит нас из временной области в частотную, и это влечет за собой огромное количество применений. Быстрое преобразование
-Фурье (БПФ) представляет собой алгоритм вычисления Дискретного преобразования Фурье (ДПФ). Спектр не содержит какой-либо информации о времени, а состоит из комплексных чисел (одно число для каждой синусоиды). В комплексном числе закодированы две вещи: амплитуда и угол. 
+Этому вопросы посвящено множество публикаций: С.~Л.~Дольфа, Дж.~Ф.~Кайзера, Р.~Б.~Блэкмана, В.~Барсилона и Г.~Темеша, С.~Л.~Марпла-мл, А В. Оппенгейма, Дж. Хэрриса, В Ф Кравченко, В.Г Алексеева, А.В Дворковича, С Н. Кириллова, В И. Кошелева.
+Применение оконных функций позволяет ослабить боковые лепестков спектра, за счет ухудшения спектрального разрешения.
 
-Эффективные алгоритмы преобразования Фурье описаны в работах J.~Cooley, S.~Winograd, R.~Blahut, Г.~Нуссбаумера, Л.~М.~Гольденберга, А.~Оппенгейма и другие ученые. 
 
-%Cooley J. W., Tukey J. W. An algorithm for the machine calculation of complex Fourier series //Mathematics of computation. – 1965. – Т. 19. – №. 90. – С. 297-301.
-% Winograd S. On computing the discrete Fourier transform //Mathematics of computation. – 1978. – Т. 32. – №. 141. – С. 175-199.
-% R. E. Blahut, "Algebraic fields, signal processing, and error control," in Proceedings of the IEEE, vol. 73, no. 5, pp. 874-893, May 1985, doi: 10.1109/PROC.1985.13219.
-%Нуссбаумер Г. Быстрое преобразование Фурье и алгоритмы вычисления сверток. – Радио и связь, 1985.
-% Гольденберг Л. М. и др. Цифровая обработка сигналов: Справочник. – Радио и связь, 1985.
-% Оппенгейм А., Шафер Р. Цифровая обработка сигналов. – Litres, 2018.
-
-Цифровой сигнал можно представить из аналогового методом дискретизации. Дискретизация сигнала может производиться по времени (выборка) и по величине сигнала (квантованием). Преобразование из аналогово сигнала в цифровой называют аналогово-цифровым преобразованием (АЦП). 
-
-Существуют сигналы, имеющие более одной независимой переменной. Такие сигналы называют многомерными. Например, сигнал изображения. Сигналы, имеющие две независимые переменные, называют -- двумерными.
-Наиболее популярный способ сравнения таких сигналов – это их корреляция или свертка. Корреляция может быть вычислена по алгоритмам циклической свертки, для этого необходимо прочитать один из двух сигналов в обратном порядке. Класс быстрых методов вычисления корреляции состоит в ее разложении на более короткие корреляции. Z.~J.~Mou, Y.~Naito, Л.~Рабинер и другие исследователи предложили и описали эти алгоритмы в своих работах.
-% Mou Z. J., Duhamel P. Fast FIR filtering: algorithms and implementations //Signal Processing. – 1987. – Т. 13. – №. 4. – С. 377-384.
-
-% Y. Naito, T. Miyazaki and I. Kuroda, "A fast full-search motion estimation method for programmable processors with a multiply-accumulator," 1996 IEEE International Conference on Acoustics, Speech, and Signal Processing Conference Proceedings, 1996, pp. 3221-3224 vol. 6, doi: 10.1109/ICASSP.1996.550562.
-
-%Рабинер Л., Гоулд Б. Теория и применение цифровой обработки сигналов. – Рипол Классик, 1978.
-
-Совокупность амплитуд гармоник ряда Фурье часто называют амплитудным спектром, а совокупность фаз -- фазовым спектром. Спектр амплитуд показывает, как велика составляющая каждой гармоники внутри сигнала. Гармонический сигнал определяется тремя числовыми параметрами: амплитудой, частотой и фазой. Колебания самого большого периода называют колебанием основной частоты или колебанием первой гармоники. Первая гармоника является периодической функцией с периодом $2 \pi$. Ряд Фурье четной функции содержит только косинусы. Ряд Фурье нечетной функции содержит синусы.
-
-В ЦОС оконные функции широко используются для ограничения сигнала во времени. Классические оконные функции включают функции: Ханна, Хемминга, Блэкмана, Кайзера и другие. Оконная функция Кайзера – хорошая аппроксимация оптимального вытянутого сферического окна, концентрирующего большинство энергии в главном лепестке.
-Путем корректировки параметра $\beta$ мы можем выполнить настройку окна
-Кайзера.
-
-В основе всех методов оценки параметров гармоник многотональных сигналов лежат перечисленные выше базовые алгоритмы ЦОС. Параметры гармоник находятся по спектру сигнала, получаемого с помощью БПФ, который по сути представляет собой набор корреляций с различными гармониками. В следствии ограничения по времени обрабатываемого сигнала все методы сталкиваются с эффектами вызванными оконными функциями.
-
-В диссертационной работе рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих сигнала: интерполяционные методы, метод корреляционных функций, модернизированный метод корреляционных функций и метод, рекомендованный в ГОСТ, прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов. 
-
-Значительный вклад в решение вопросов по оценке параметров гармоник внесли Российские и зарубежные ученые: 
-В.~Н.~Горюнов, 
-% Горюнов В. Н., Осипов Д. С., Лютаревич А. Г. Определение управляющего воздействия активного фильтра гармоник //Электро. Электротехника, электроэнергетика, электротехническая промышленность. – 2009. – №. 6. – С. 20-24.
-% Лютаревич, А. Г.; Горюнов, В. Н.; Долингер, С. Ю. & Хацевич, К. В. Вопросы моделирования устройств обеспечения качества электрической энергии. Омский научный вестник, Федеральное государственное бюджетное образовательное учреждение высшего ..., 2013
-И.~В.~Жежеленко,
-%Жежеленко И. В., Саенко Ю. Л., Бараненко Т. К. Интергармоники в системах электроснабжения промпредприятий //Вестник Приазовского государственного технического университета. Серия: Технические науки. – 1999. – №. 8.
-% Жежеленко И. В. Высшие гармоники в системах электроснабжения промпредприятий. – 2010.
-В.~Т.~Черемисин,
-% Черемисин В. Т., Дубовик Е. П. Способ расчета высших гармоник, генерируемых несколькими электротяговыми нагрузками //Динамика электрических машин. – 1985. – С. 150-153.
-% Черемисин В. Т., Грицутенко С. С. Способ повышения точности измерения гармонических составляющих тягового тока и напряжения //Вестник Ростовского государственного университета путей сообщения. – 2007. – №. 2. – С. 94-99.
+Значительный вклад в решение вопросов по изучению алгоритмов оценки спектральных составляющих многотонального сигнала внесли зарубежные ученые:
 E.~Jacobsen, 
 % E. Jacobsen and P. Kootsookos, "Fast, Accurate Frequency Estimators [DSP Tips & Tricks]," in IEEE Signal Processing Magazine, vol. 24, no. 3, pp. 123-125, May 2007, doi: 10.1109/MSP.2007.361611.
 %Jacobsen E. On local interpolation of DFT outputs //Available online: http://www. ericjacobsen. org/FTinterp. pdf.[Accessed January 2013]. – 1994.
@@ -71,8 +45,42 @@ B.~G.~Quinn,
 % Quinn, B. Estimating frequency by interpolation using Fourier coefficients IEEE Transactions on Signal Processing, 1994, 42, 1264-1268
 % Quinn, B. & Kootsookos, P. Threshold behavior of the maximum likelihood estimator of frequency IEEE Transactions on Signal Processing, 1994, 42, 3291-3294
 % Quinn, B. G. Estimation of frequency, amplitude, and phase from the DFT of a time series IEEE Transactions on Signal Processing, 1997, 45, 814-817
-Thomas~Grandke,
+Thomas~Grandke и другие ученые.
 % Grandke, T. Interpolation Algorithms for Discrete Fourier Transforms of Weighted Signals IEEE Transactions on Instrumentation and Measurement, 1983, 32, 350-355
+Основным направлением в применении цифровой обработки сигналов (ЦОС) является спектральный анализ. Каждый сигнал, который изменяется во времени, имеет частотный спектр. Электрические сигналы можно анализировать в частотной области с помощью анализаторов спектра, во временной области с помощью осциллографов. 
+
+Преобразование Фурье (Fourier transform) уводит нас из временной области в частотную, и это влечет за собой огромное количество применений. 
+БПФ представляет собой алгоритм вычисления ДПФ. Спектр не содержит какой-либо информации о времени, а состоит из комплексных чисел. Эффективные алгоритмы преобразования Фурье описаны в работах J.~Cooley, S.~Winograd, R.~Blahut, Г.~Нуссбаумера, Л.~М.~Гольденберга, А.~Оппенгейма и другие ученые.
+%Cooley J. W., Tukey J. W. An algorithm for the machine calculation of complex Fourier series //Mathematics of computation. – 1965. – Т. 19. – №. 90. – С. 297-301.
+% Winograd S. On computing the discrete Fourier transform //Mathematics of computation. – 1978. – Т. 32. – №. 141. – С. 175-199.
+% R. E. Blahut, "Algebraic fields, signal processing, and error control," in Proceedings of the IEEE, vol. 73, no. 5, pp. 874-893, May 1985, doi: 10.1109/PROC.1985.13219.
+%Нуссбаумер Г. Быстрое преобразование Фурье и алгоритмы вычисления сверток. – Радио и связь, 1985.
+% Гольденберг Л. М. и др. Цифровая обработка сигналов: Справочник. – Радио и связь, 1985.
+% Оппенгейм А., Шафер Р. Цифровая обработка сигналов. – Litres, 2018.
+
+Существуют сигналы, имеющие более одной независимой переменной. Такие сигналы называют многомерными. Например, сигнал изображения. Сигналы, имеющие две независимые переменные, называют -- двумерными.
+Наиболее популярный способ сравнения таких сигналов – это их корреляция или свертка. Корреляция может быть вычислена по алгоритмам циклической свертки, для этого необходимо прочитать один из двух сигналов в обратном порядке. Класс быстрых методов вычисления корреляции состоит в ее разложении на более короткие корреляции. Z.~J.~Mou, Y.~Naito, Л.~Рабинер и другие исследователи предложили и описали эти алгоритмы в своих работах.
+% Mou Z. J., Duhamel P. Fast FIR filtering: algorithms and implementations //Signal Processing. – ч1987. – Т. 13. – №. 4. – С. 377-384.
+
+% Y. Naito, T. Miyazaki and I. Kuroda, "A fast full-search motion estimation method for programmable processors with a multiply-accumulator," 1996 IEEE International Conference on Acoustics, Speech, and Signal Processing Conference Proceedings, 1996, pp. 3221-3224 vol. 6, doi: 10.1109/ICASSP.1996.550562.
+
+%Рабинер Л., Гоулд Б. Теория и применение цифровой обработки сигналов. – Рипол Классик, 1978.
+
+%Совокупность амплитуд гармоник ряда Фурье часто называют амплитудным спектром, а совокупность фаз -- фазовым спектром. Спектр амплитуд показывает, как велика составляющая каждой гармоники внутри сигнала. Гармонический сигнал определяется тремя числовыми параметрами: амплитудой, частотой и фазой. Колебания самого большого периода называют колебанием основной частоты или колебанием первой гармоники. Первая гармоника является периодической функцией с периодом $2 \pi$. Ряд Фурье четной функции содержит только косинусы. Ряд Фурье нечетной функции содержит синусы.
+
+В основе всех методов оценки параметров гармоник мультигармонических сигналов лежат перечисленные выше базовые алгоритмы ЦОС. Параметры гармоник находятся по спектру сигнала, получаемого с помощью БПФ, который по сути представляет собой набор корреляций с различными гармониками. В следствии ограничения по времени обрабатываемого сигнала все методы сталкиваются с эффектами вызванными оконными функциями.
+
+Значительный вклад в решение вопросов по оценке параметров гармоник электрической энергии внесли Российские и зарубежные ученые:
+В.~Г.~Аввакумов, В.~Д.~Бардушко, И.~И.~Карташов, В.~З.~Манусов, М.~Г.~Шалимов, А.~К.~Шидловский
+В.~Н.~Горюнов, 
+% Горюнов В. Н., Осипов Д. С., Лютаревич А. Г. Определение управляющего воздействия активного фильтра гармоник //Электро. Электротехника, электроэнергетика, электротехническая промышленность. – 2009. – №. 6. – С. 20-24.
+% Лютаревич, А. Г.; Горюнов, В. Н.; Долингер, С. Ю. & Хацевич, К. В. Вопросы моделирования устройств обеспечения качества электрической энергии. Омский научный вестник, Федеральное государственное бюджетное образовательное учреждение высшего ..., 2013
+И.~В.~Жежеленко,
+%Жежеленко И. В., Саенко Ю. Л., Бараненко Т. К. Интергармоники в системах электроснабжения промпредприятий //Вестник Приазовского государственного технического университета. Серия: Технические науки. – 1999. – №. 8.
+% Жежеленко И. В. Высшие гармоники в системах электроснабжения промпредприятий. – 2010.
+В.~Т.~Черемисин,
+% Черемисин В. Т., Дубовик Е. П. Способ расчета высших гармоник, генерируемых несколькими электротяговыми нагрузками //Динамика электрических машин. – 1985. – С. 150-153.
+% Черемисин В. Т., Грицутенко С. С. Способ повышения точности измерения гармонических составляющих тягового тока и напряжения //Вестник Ростовского государственного университета путей сообщения. – 2007. – №. 2. – С. 94-99.
 Cheng-I~Chen,
 %C. Chen and Y. Chen, "Comparative Study of Harmonic and Interharmonic Estimation Methods for Stationary and Time-Varying Signals," in IEEE Transactions on Industrial Electronics, vol. 61, no. 1, pp. 397-404, Jan. 2014, doi: 10.1109/TIE.2013.2242419.
 Jiufei~Luo, Zhijiang~Xie, Ming~Xie,
@@ -82,12 +90,26 @@ Krzysztof~Duda,
 % Duda, K. DFT interpolation algorithm for Kaiser--Bessel and Dolph--Chebyshev windows. IEEE Transactions on Instrumentation and Measurement, IEEE, 2011, 60, 784-790
 Shen Zhou, Zhang Shancong,
 % Zhou S., Shancong Z. Improved frequency estimation algorithm by least squares phase unwrapping //Circuits, Systems, and Signal Processing. – 2018. – Т. 37. – №. 12. – С. 5680-5687.
-Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и другие ученые.
+Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho, 
 % Ramos, C. J.; Martins, A. P. & da Silva Carvalho, A. Power system frequency estimation using a least mean squares differentiator International Journal of Electrical Power & Energy Systems, Elsevier, 2017, 87, 166-175
 % Ramos, C.; Martins, A. & Carvalho, A. Synchronizing renewable energy sources in distributed generation systems Proc. Int. Conf. Renew. Energy Power Qual.(ICREPQ), Zaragoza, Spain, 2005, 1-5
 % Ramos, C. J.; Martins, A. P. & Carvalho, A. S. Frequency and Phase-Angle Estimation Using Ordinary Least Squares IEEE Transactions on Industrial Electronics, 2015, 62, 5677-5688
+J. Arrillaga, N.R. Watson, S. Santoso и другие ученые.
 
-{\aim} данной работы является совершенствование алгоритмов оценки параметров гармоник многотонального сигнала.
+Огромный вклад в разработку методов определения параметров
+сигналов внесли: Котельников В.А., Василенко Г.И., Минц М.Я., Бушуев
+С.В., Мелентьев В.С., Гутников В.С., Кравченко В.Ф., Попов В.С., Желбаков
+И.Н., Стрелковская И.В., Оппегейн А.В., Шафер Р.В., Давыдов П.С., Rabiner
+R., Gold B., Harris F.J., Gibbons G., Betta G., а также другие отечественные и
+зарубежные ученые
+
+
+%Цифровой сигнал можно представить из аналогового методом дискретизации. Дискретизация сигнала может производиться по времени (выборка) и по величине сигнала (квантованием). Преобразование из аналогово сигнала в цифровой называют аналогово-цифровым преобразованием (АЦП). 
+
+
+Диссертационная работа посвящена совершенствованию методов оценки гармонических и интергармонических составляющих сигнала. Проблема является актуальной и требует новых решений по данным вопросам.
+
+{\aim} данной работы является совершенствование алгоритмов оценки параметров гармоник мультигармонического сигнала.
 
 %{\researchObject} являются алгоритмы оценки параметров гармоник в силовых электрических сетях.
 
@@ -95,13 +117,13 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Анализ математических основ объекта исследования и формулировка математической модели многотонального сигнала. Изучение и экспериментальное исследование алгоритмов оценки параметров гармоник.
+  \item Анализ математических основ объекта исследования и формулировка математической модели мультигармонического сигнала. Изучение и экспериментальное исследование алгоритмов оценки параметров гармоник.
   
-  \item Развитие математической модели многотональных сигналов в части расчета точности оценки амплитуды применительно к используемому при оценке параметров гармоник подходу, связанному с применением оконных функций.
+  \item Развитие математической модели мультигармонических сигналов в части расчета точности оценки амплитуды применительно к используемому при оценке параметров гармоник подходу, связанному с применением оконных функций.
   
   \item Разработка численных методов для оценки параметров гармоник, позволяющих достичь расчетной точности для амплитуды гармоники и разработка алгоритмов для эффективного выполнения численных методов.
   
-  \item Разработка комплекса программа для анализа и доработки алгоритмов оценки параметров гармоник многотональных сигналов.
+  \item Разработка комплекса программа для анализа и доработки алгоритмов оценки параметров гармоник мультигармонических сигналов.
 \end{enumerate}
 
 
@@ -110,24 +132,24 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 % В формулировке положений,  выносимых  на защиту, должны  содержаться  отличительные признаки новых  научных результатов,  характеризующие  вклад  соискателя  в область науки,  к которой относится тема диссертации. Они должны содержать не только краткое изложение сущности  полученных  результатов,  но  и  сравнительную  оценку  их  научной  и  практической значимости.
  
 \begin{enumerate}
-  \item Уточнена математическая модель спектра многотонального сигнала полученными и экспериментально проверенными формулами для нахождения границы Крамера-Рао при оценке амплитуды гармоники для взвешенного оконной функцией сигнала.
-  
-  \item Предложен численный метод нахождения оптимальной несмещенной оценки амплитуды гармоники на основе корреляционного анализа, а также предложена его быстрая реализация на основе алгоритмов разряженного БПФ.
-  
-  \item Реализован комплекс программ для экспериментальной проверки полученных в работе формул и анализа алгоритмов оценки параметров гармоник многотональных сигналов.
+\item Расширена математическая модель спектра дискретизированного синусоидального сигнала полученными и экспериментально проверенными формулами для нахождения границы Крамера-Рао для оценки амплитуды сигнала при использовании оконной функции.
+
+\item Предложен численный метод нахождения оптимальной несмещенной оценки параметров гармоник на основе корреляционного анализа, отличающийся тем, что позволяет оценивать параметры с теоретически максимально возможной точностью и применением быстрых алгоритмов нахождения корреляции и усеченного БПФ для повышения быстродейстия.
+
+\item Реализован комплекс программ для экспериментальной проверки полученных в работе формул и анализа алгоритмов оценки параметров гармоник мультигармонических сигналов, отличающийся новым алгоритмом поиска гармоник и применением разработанных в работе численных методов для оценки параметров гармоник.
 \end{enumerate}
 
 {\influence} 
 
 \begin{enumerate}
-	\item Выведена формула для нахождения границы Крамера-Рао при применении оконной функции, которая позволяет повысить эффективность научных исследований различных алгоритмов обработки сигналов с применением оконных функций, заменив моделирование алгоритма с применением различных окон расчетом по предложенной формуле.
-	
-	\item Предложенный численный метод, вместе с его быстрой реализацией, позволяют повысить точность и достоверность результатов измерительных приборов для электрических сетей.
-	
-	\item Разработанный комплекс программ позволяет проводить научные исследования в области цифровой обработки сигналов и используется в учебном процессе.
+\item Выведена формула для нахождения границы Крамера-Рао при применении оконной функции, которая позволяет повысить эффективность научных исследований различных алгоритмов обработки сигналов с применением оконных функций, заменив моделирование алгоритма с применением различных окон расчетом по предложенной формуле.
+
+\item Предложенный численный метод, вместе с его быстрой реализацией, позволяют повысить точность оценки параметров гармоник в различных измерительных приборах. Количественная оценка повышения точности зависит от области применения метода, для задачи оценки параметров гармоник в электрических сетях точность повышается на единицы процентов.
+
+\item Разработанный комплекс программ позволяет проводить научные исследования в области цифровой обработки сигналов и используется в учебном процессе.
 \end{enumerate}
 
-На основании теоретических и экспериментальных исследований разработан и зарегистрирована программа, написанная на языке программирования Python, позволяющая решать задачи спектрального анализа напряжений в электроэнергетической системе, а также оценивать параметры гармоник многотонального сигнала.
+На основании теоретических и экспериментальных исследований разработан и зарегистрирована программа, написанная на языке программирования Python, позволяющая решать задачи спектрального анализа напряжений в электроэнергетической системе, а также оценивать параметры гармоник мультигармонического сигнала.
 
 
 {\methods} 
@@ -139,9 +161,9 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 \newpage
 {\defpositions}
 \begin{enumerate}
-  \item Дополнение к математической модели многотонального сигнала в виде формулы, позволяющей определить дисперсию оценки амплитуды гармоники, отличающемуся от известной границы Крамера-Рао учетом изменения дисперсии после применения оконных функций.
+  \item Дополнение к математической модели мультигармонического сигнала в виде формулы, позволяющей определить дисперсию оценки амплитуды гармоники, отличающемуся от известной границы Крамера-Рао учетом изменения дисперсии после применения оконных функций.
   \item Основанный на корреляционном анализе численный метод, позволяющий определить параметры гармоник сигналов с точностью, определяемой уточненной границей Крамера-Рао, включающий в себя вычислительно-эффективную схему расчета корреляций и отличающийся от известных методов отсутствием потерь в точности результатов при интерполировании параметров гармоник.
-  \item Комплекс программ для анализа и построения алгоритмов оценки параметров многотональных сигналов.
+  \item Комплекс программ для анализа и построения алгоритмов оценки параметров мультигармонических сигналов.
 \end{enumerate}
 %В папке Documents можно ознакомиться в решением совета из Томского ГУ
 %в~файле \verb+Def_positions.pdf+, где обоснованно даются рекомендации
@@ -150,7 +172,7 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 {\reliability} 
 научных результатов, выводов и рекомендаций диссертации определяется корректным применением
 общенаучных методов исследования и математических методов, а также
-надежной информационной базой исследования. Выводы диссертационного исследования не противоречат известным теоретическим и практическим результатам, содержащимся в трудах отечественных и зарубежных ученых в области улучшения алгоритмов оценки параметров многотонального сигнала.
+надежной информационной базой исследования. Выводы диссертационного исследования не противоречат известным теоретическим и практическим результатам, содержащимся в трудах отечественных и зарубежных ученых в области улучшения алгоритмов оценки параметров мультигармонического сигнала.
 
 
 % второй вариант
