--- a/common/data.tex
+++ b/common/data.tex
@@ -15,7 +15,7 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\todo{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\textsc{совершенствование математической модели многотонального сигнала и численных методов оценки параметров его гармоник}}
+{\textsc{совершенствование математической модели мультигармонического сигнала и численных методов оценки параметров его гармоник}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
 {05.13.18}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
