--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -318,7 +318,8 @@ $x(n;\theta)$ – наблюдаемый сигнал;
 
 $A$ – амплитуда гармоники. 
 
-Эта формула дает оценку дисперсии при использовании метода, вносящего оптимальную несмещенную оценку. В работе \cite{altman2020boundary} ввели новое обозначение коэффициент окна:
+Эта формула дает оценку дисперсии при использовании метода, вносящего оптимальную несмещенную оценку. В работе %\cite{altman2020boundary}
+ввели новое обозначение коэффициент окна:
 \begin{equation}
 	\label{eq:equation19}
 	F_{win}=\frac{\sum_{n=0}^{N-1}w_n^2}{\left(\sum_{n=0}^{N-1} w_n\right)^2}
@@ -351,7 +352,7 @@ $A$ – амплитуда гармоники.
 	\label{img:estimate_amp_sin_kaiser_noise}
 \end{figure}
 
-Дальнейшие исследования влияния оконных функций на формулу для нахождения границы Крамера-Рао рассмотрены в статье \cite{altman2021boundary}.
+Дальнейшие исследования влияния оконных функций на формулу для нахождения границы Крамера-Рао рассмотрены в статье. %\cite{altman2021boundary}.
 В статье изучили весовые функции: Кайзера, Барлетта, Ханна, Хэмминга, Блэкмана (результаты приведены в таблице \ref{tbl:test2_1}). Формула для оценки дисперсии амплитуды дает наилучший результат с весовыми функциями: Кайзера ($\beta=4$), Хэмминга, Барлетта. Совпадение дисперсий оценок прямого корреляционного метода и оценок, полученных по формуле показывают, что чем меньше коэффициент увеличения дисперсии, тем точнее результаты. Наихудший результат показало окно Кайзера с параметром $\beta=15$ \ref{eq:equation19}.
 \begin{table}[ht]%
 	\caption{Зависимость дисперсии оценки амплитуды от дисперсии шума.}
